force-app/main/default/objects/Case/fields/CustomerSentiment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSentiment__c</fullName>
    <label>고객 태도</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>긍정</fullName><default>false</default><label>긍정</label></value>
            <value><fullName>보통</fullName><default>false</default><label>보통</label></value>
            <value><fullName>부정</fullName><default>false</default><label>부정</label></value>
            <value><fullName>알수없음</fullName><default>false</default><label>알수없음</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>