force-app/main/default/objects/Case/fields/InquiryType__c.field-meta.xml
<CustomField>
    <fullName>InquiryType__c</fullName>
    <label>질문 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>사용방법</fullName><default>false</default><label>사용방법</label></value>
            <value><fullName>오류·고장</fullName><default>false</default><label>오류·고장</label></value>
            <value><fullName>교체·구매</fullName><default>false</default><label>교체·구매</label></value>
            <value><fullName>계약·렌탈</fullName><default>false</default><label>계약·렌탈</label></value>
            <value><fullName>보험·청구</fullName><default>false</default><label>보험·청구</label></value>
            <value><fullName>점검 요청</fullName><default>false</default><label>점검 요청</label></value>
            <value><fullName>기타</fullName><default>false</default><label>기타</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>