force-app/main/default/objects/Case/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>제품 카테고리</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ResMed AirSense 11</fullName><default>false</default><label>ResMed AirSense 11</label></value>
            <value><fullName>Philips DreamStation 2</fullName><default>false</default><label>Philips DreamStation 2</label></value>
            <value><fullName>마스크</fullName><default>false</default><label>마스크</label></value>
            <value><fullName>소모품·필터</fullName><default>false</default><label>소모품·필터</label></value>
            <value><fullName>기타</fullName><default>false</default><label>기타</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>